The second submission candidate

--- a/fun4all/offline/papers/ppg239/references.bib
+++ b/fun4all/offline/papers/ppg239/references.bib
@@ -1,6 +1,6 @@
 @article{1988364,
 title = "A measurement of the spin asymmetry and determination of the structure function g1 in deep inelastic muon-proton scattering",
-journal = "Physics Letters B",
+journal = "Phys. Lett. B",
 volume = "206",
 number = "2",
 pages = "364 - 370",
@@ -13,7 +13,7 @@ author = "{European Muon Collaboration}"
 
 @article{ASHMAN19891,
 title = {An investigation of the spin structure of the proton in deep inelastic scattering of polarised muons on polarised protons},
-journal = {Nuclear Physics B},
+journal = {Nucl. Phys. B},
 volume = {328},
 number = {1},
 pages = {1-35},
@@ -34,14 +34,14 @@ author = {{European Muon Collaboration}},
   numpages = {17},
   year = {1998},
   month = {Oct},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.58.112001},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.58.112001}
 }
 
 @article{ALEXAKHIN20078,
 title = "The deuteron spin-dependent structure function g1d and its first moment",
-journal = "Physics Letters B",
+journal = "Phys. Lett. B",
 volume = "647",
 number = "1",
 pages = "8 - 17",
@@ -62,7 +62,7 @@ author = "{COMPASS Collaboration}"
   numpages = {48},
   year = {2007},
   month = {Jan},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.75.012007},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.75.012007}
 }
@@ -78,8 +78,8 @@ author = "{COMPASS Collaboration}"
 
 @article{doi:10.1146/annurev.nucl.50.1.525,
 author = {Bunce, Gerry and Saito, Naohito and Soffer, Jacques and Vogelsang, Werner},
-title = {Prospects for Spin Physics at RHIC},
-journal = {Annual Review of Nuclear and Particle Science},
+title = {Prospects for Spin Phys. at RHIC},
+journal = {Ann. Rev. Nucl. Part. Sci.},
 volume = {50},
 number = {1},
 pages = {525-575},
@@ -90,7 +90,7 @@ URL = {https://doi.org/10.1146/annurev.nucl.50.1.525}
 
 @article{ADCOX2003469,
 title = {PHENIX detector overview},
-journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {499},
 number = {2},
 pages = {469-479},
@@ -103,7 +103,7 @@ author = {{PHENIX Collaboration}}
 
 @article{ALLEN2003549,
 title = {PHENIX inner detectors},
-journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {499},
 number = {2},
 pages = {549-559},
@@ -116,7 +116,7 @@ author = {{PHENIX Collaboration}}
 
 @article{ADLER2001488,
 title = {The RHIC zero degree calorimeters},
-journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {470},
 number = {3},
 pages = {488-499},
@@ -129,7 +129,7 @@ author = {C Adler and A Denisov and E Garcia and M Murray and H Stroebele and S 
 
 @article{APHECETCHE2003521,
 title = {PHENIX calorimeter},
-journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {499},
 number = {2},
 pages = {521-536},
@@ -142,7 +142,7 @@ author = {{PHENIX Collaboration}}
 
 @article{ADCOX2003489,
 title = {PHENIX central arm tracking detectors},
-journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {499},
 number = {2},
 pages = {489-507},
@@ -155,7 +155,7 @@ author = {{PHENIX Collaboration}}
 
 @article{SONDHEIM2012993,
 title = {Mechanics and Assembly of the Silicon Vertex Detector for the PHENIX Experiment at RHIC},
-journal = {Physics Procedia},
+journal = {Phys. Procedia},
 volume = {37},
 pages = {993-1002},
 year = {2012},
@@ -167,7 +167,7 @@ author = {Walter Sondheim}
 
 @article{POBLAGUEV2020164261,
 title = {Systematic error analysis in the absolute hydrogen gas jet polarimeter at RHIC},
-journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {976},
 pages = {164261},
 year = {2020},
@@ -196,7 +196,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {6},
   year = {2007},
   month = {Jan},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevLett.98.012002},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.98.012002}
 }
@@ -211,7 +211,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {15},
   year = {2012},
   month = {Oct},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.86.072008},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.86.072008}
 }
@@ -226,7 +226,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {6},
   year = {2004},
   month = {Nov},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevLett.93.202002},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.93.202002}
 }
@@ -241,7 +241,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {5},
   year = {2006},
   month = {May},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.73.091102},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.73.091102}
 }
@@ -256,7 +256,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {7},
   year = {2007},
   month = {Sep},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.76.051106},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.76.051106}
 }
@@ -271,7 +271,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {11},
   year = {2009},
   month = {Jan},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.79.012003},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.79.012003}
 }
@@ -286,7 +286,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {6},
   year = {2009},
   month = {Jul},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevLett.103.012003},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.103.012003}
 }
@@ -301,7 +301,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {11},
   year = {2011},
   month = {Feb},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.83.032001},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.83.032001}
 }
@@ -316,7 +316,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {13},
   year = {2012},
   month = {Nov},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.86.092006},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.86.092006}
 }
@@ -331,7 +331,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {19},
   year = {2014},
   month = {Jul},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.90.012007},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.90.012007}
 }
@@ -346,7 +346,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {13},
   year = {2015},
   month = {Feb},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.91.032001},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.91.032001}
 }
@@ -361,7 +361,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {8},
   year = {2016},
   month = {Jan},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.93.011501},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.93.011501}
 }
@@ -376,7 +376,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {9},
   year = {2020},
   month = {Aug},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.102.032001},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.102.032001}
 }
@@ -391,7 +391,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {6},
   year = {2006},
   month = {Dec},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevLett.97.252001},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.97.252001}
 }
@@ -406,7 +406,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {18},
   year = {2011},
   month = {Jul},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.84.012006},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.84.012006}
 }
@@ -421,7 +421,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {18},
   year = {2012},
   month = {Aug},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.86.032006},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.86.032006}
 }
@@ -436,7 +436,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {7},
   year = {2015},
   month = {Aug},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevLett.115.092002},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.092002}
 }
@@ -451,7 +451,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {8},
   year = {2017},
   month = {Apr},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.95.071103},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.95.071103}
 }
@@ -466,7 +466,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {27},
   year = {2019},
   month = {Sep},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.100.052005},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.100.052005}
 }
@@ -481,100 +481,102 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
   numpages = {26},
   year = {2011},
   month = {Mar},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.83.052004},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.83.052004}
 }
 
-@article{Sjostrand:2006za,
+@misc{Sjostrand:2006za,
     author = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter Z.",
-    title = "{PYTHIA 6.4 Physics and Manual}",
-    eprint = "hep-ph/0603175",
-    archivePrefix = "arXiv",
-    reportNumber = "FERMILAB-PUB-06-052-CD-T, LU-TP-06-13",
+    title = "{PYTHIA 6.4 Phys. and Manual}",
     doi = "10.1088/1126-6708/2006/05/026",
-    journal = "JHEP",
-    volume = "05",
-    pages = "026",
-    year = "2006"
+    note = "{J. High Energy Phys. {\bf 05 (2006)} 026}",
 }
+%    journal = "J. High Energy Phys.",
+%    volume = "05",
+%    pages = "026",
+%    year = "2006"
+%    eprint = "hep-ph/0603175",
+%    archivePrefix = "arXiv",
+%    reportNumber = "FERMILAB-PUB-06-052-CD-T, LU-TP-06-13",
 
-@article{Nason_2004,
-	doi = {10.1088/1126-6708/2004/11/040},
-	url = {https://doi.org/10.1088%2F1126-6708%2F2004%2F11%2F040},
-	year = 2004,
-	month = {nov},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {2004},
-	number = {11},
-	pages = {040--040},
-	author = {Paolo Nason},
-	title = {A New Method for Combining {NLO} {QCD} with Shower Monte Carlo Algorithms},
-	journal = {Journal of High Energy Physics}
+@misc{Nason_2004,
+    author = "Nason, Paolo",
+    title = "{A New method for combining NLO QCD with shower Monte Carlo algorithms}",
+    doi = "10.1088/1126-6708/2004/11/040",
+    note = "{J. High Energy Phys. {\bf 11 (2004)} 040}",
 }
+%    journal = "JHEP",
+%    volume = "11",
+%    pages = "040",
+%    year = "2004"
+%    eprint = "hep-ph/0409146",
+%    archivePrefix = "arXiv",
+%    reportNumber = "BICOCCA-FT-04-11",
 
-@article{Frixione_2007,
-	doi = {10.1088/1126-6708/2007/11/070},
-	url = {https://doi.org/10.1088%2F1126-6708%2F2007%2F11%2F070},
-	year = 2007,
-	month = {nov},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {2007},
-	number = {11},
-	pages = {070--070},
+@misc{Frixione_2007,
 	author = {Stefano Frixione and Paolo Nason and Carlo Oleari},
 	title = {Matching {NLO} {QCD} computations with parton shower simulations: the {POWHEG} method},
-	journal = {Journal of High Energy Physics}
-}
+	doi = {10.1088/1126-6708/2007/11/070},
+        note = "{J. High Energy Phys. {\bf 11 (2007)} 070}",
+}    
+%	url = {https://doi.org/10.1088%2F1126-6708%2F2007%2F11%2F070},%
+%	year = 2007,
+%	month = {nov},
+%	publisher = {Springer Science and Business Media {LLC}},
+%	volume = {2007},
+%	number = {11},
+%	pages = {070--070},
+%	journal = {J. High Energy Phys.}
 
-@Article{Alioli2010,
-author={Alioli, Simone
-and Nason, Paolo
-and Oleari, Carlo
-and Re, Emanuele},
+@misc{Alioli2010,
+author={Alioli, Simone and Nason, Paolo and Oleari, Carlo and Re, Emanuele},
 title={A general framework for implementing NLO calculations in shower Monte Carlo programs: the POWHEG BOX},
-journal={Journal of High Energy Physics},
-year={2010},
-month={Jun},
-day={09},
-volume={2010},
-number={6},
-pages={43},
-issn={1029-8479},
-doi={10.1007/JHEP06(2010)043},
-url={https://doi.org/10.1007/JHEP06(2010)043}
+doi={10.1007/J. High Energy Phys.06(2010)043},
+    note = "{J. High Energy Phys. {\bf 06 (2010)} 043}",
 }
+%journal={J. High Energy Phys.},
+%year={2010},
+%month={Jun},
+%day={09},
+%volume={2010},
+%number={6},
+%pages={43},
+%issn={1029-8479},
+%url={https://doi.org/10.1007/J. High Energy Phys.06(2010)043}
 
-@Article{Jezo2016,
+@misc{Jezo2016,
 author={Je{\v{z}}o, Tom{\'a}{\v{s}} and Klasen, Michael and K{\"o}nig, Florian},
 title={Prompt photon production and photon-hadron jet correlations with POWHEG},
-journal={Journal of High Energy Physics},
-year={2016},
-month={Nov},
-day={07},
-volume={2016},
-number={11},
-pages={33},
-issn={1029-8479},
-doi={10.1007/JHEP11(2016)033},
-url={https://doi.org/10.1007/JHEP11(2016)033}
+doi={10.1007/J. High Energy Phys.11(2016)033},
+    note = "{J. High Energy Phys. {\bf 11 (2016)} 033}",
 }
+%journal={J. High Energy Phys.},
+%year={2016},
+%month={Nov},
+%day={07},
+%volume={2016},
+%number={11},
+%pages={33},
+%issn={1029-8479},
+%url={https://doi.org/10.1007/J. High Energy Phys.11(2016)033}
 
-@Article{Klasen2018,
-author={Klasen, Michael
-and Klein-B{\"o}sing, Christian
-and Poppenborg, Hendrik},
+
+@misc{Klasen2018,
+author={Klasen, Michael and Klein-B{\"o}sing, Christian and Poppenborg, Hendrik},
 title={Prompt photon production and photon-jet correlations at the LHC},
-journal={Journal of High Energy Physics},
-year={2018},
-month={Mar},
-day={13},
-volume={2018},
-number={3},
-pages={81},
-issn={1029-8479},
-doi={10.1007/JHEP03(2018)081},
-url={https://doi.org/10.1007/JHEP03(2018)081}
+doi={10.1007/J. High Energy Phys.03(2018)081},
+    note = "{J. High Energy Phys. {\bf 03 (2018)} 081}",
+}
+%journal={J. High Energy Phys.},
+%year={2018},
+%month={Mar},
+%day={13},
+%volume={2018},
+%number={3},
+%pages={81},
+%issn={1029-8479},
+%url={https://doi.org/10.1007/J. High Energy Phys.03(2018)081}
 }
 
 @article{PhysRevD.93.033006,
@@ -587,7 +589,7 @@ url={https://doi.org/10.1007/JHEP03(2018)081}
   numpages = {39},
   year = {2016},
   month = {Feb},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.93.033006},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.93.033006}
 }
@@ -602,7 +604,7 @@ url={https://doi.org/10.1007/JHEP03(2018)081}
   numpages = {0},
   year = {1993},
   month = {Oct},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.48.3136},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.48.3136}
 }
@@ -617,58 +619,49 @@ url={https://doi.org/10.1007/JHEP03(2018)081}
   numpages = {0},
   year = {1994},
   month = {Aug},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.50.1901},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.50.1901}
 }
 
-@Article{Ball2015,
-author={Ball, Richard D.
-and Bertone, Valerio
-and Carrazza, Stefano
-and Deans, Christopher S.
-and Del Debbio, Luigi
-and Forte, Stefano
-and Guffanti, Alberto
-and Hartland, Nathan P.
-and Latorre, Jos{\'e} I.
-and Rojo, Juan
-and Ubiali, Maria},
+@misc{Ball2015,
+author={Ball, Richard D. and Bertone, Valerio and Carrazza, Stefano
+and Deans, Christopher S. and Del Debbio, Luigi and Forte, Stefano
+and Guffanti, Alberto and Hartland, Nathan P. and Latorre, Jos{\'e} I.
+and Rojo, Juan and Ubiali, Maria},
 title={Parton distributions for the LHC run II},
-journal={Journal of High Energy Physics},
-year={2015},
-month={Apr},
-day={08},
-volume={2015},
-number={4},
-pages={40},
-issn={1029-8479},
-doi={10.1007/JHEP04(2015)040},
-url={https://doi.org/10.1007/JHEP04(2015)040}
+doi={10.1007/J. High Energy Phys.04(2015)040},
+    note = "{J. High Energy Phys. {\bf 04 (2015)} 040}",
 }
+%journal={J. High Energy Phys.},
+%year={2015},
+%month={Apr},
+%day={08},
+%volume={2015},
+%number={4},
+%pages={40},
+%issn={1029-8479},
+%url={https://doi.org/10.1007/J. High Energy Phys.04(2015)040}
 
-@Article{Bonvini2015,
-author={Bonvini, Marco
-and Marzani, Simone
-and Rojo, Juan
-and Rottoli, Luca
-and Ubiali, Maria
-and Ball, Richard D.
-and Bertone, Valerio
-and Carrazza, Stefano
-and Hartland, Nathan P.},
+
+@misc{Bonvini2015,
+author={Bonvini, Marco and Marzani, Simone and Rojo, Juan
+and Rottoli, Luca and Ubiali, Maria and Ball, Richard D.
+and Bertone, Valerio and Carrazza, Stefano and Hartland, Nathan P.},
 title={Parton distributions with threshold resummation},
-journal={Journal of High Energy Physics},
-year={2015},
-month={Sep},
-day={28},
-volume={2015},
-number={9},
-pages={191},
-issn={1029-8479},
-doi={10.1007/JHEP09(2015)191},
-url={https://doi.org/10.1007/JHEP09(2015)191}
+doi={10.1007/J. High Energy Phys.09(2015)191},
+    note = "{J. High Energy Phys. {\bf 09 (2015)} 191}",
 }
+%journal={J. High Energy Phys.},
+%year={2015},
+%month={Sep},
+%day={28},
+%volume={2015},
+%number={9},
+%pages={191},
+%issn={1029-8479},
+%url={https://doi.org/10.1007/J. High Energy Phys.09(2015)191}
+
 
 @article{PhysRevD.45.3986,
   title = {Parton structure of the photon beyond the leading order},
@@ -680,7 +673,7 @@ url={https://doi.org/10.1007/JHEP09(2015)191}
   numpages = {0},
   year = {1992},
   month = {Jun},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.45.3986},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.45.3986}
 }
@@ -695,7 +688,7 @@ url={https://doi.org/10.1007/JHEP09(2015)191}
   numpages = {4},
   year = {2008},
   month = {Aug},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevLett.101.072001},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.101.072001}
 }
@@ -710,14 +703,14 @@ url={https://doi.org/10.1007/JHEP09(2015)191}
   numpages = {5},
   year = {2014},
   month = {Jul},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevLett.113.012001},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.113.012001}
 }
 
 @article{2014276,
 title = {A first unbiased global determination of polarized PDFs and their uncertainties},
-journal = {Nuclear Physics B},
+journal = {Nucl. Phys. B},
 volume = {887},
 pages = {276-308},
 year = {2014},
@@ -737,7 +730,23 @@ author = {Emanuele R. Nocera and Richard D. Ball and Stefano Forte and Giovanni 
   numpages = {13},
   year = {2019},
   month = {Dec},
-  publisher = {American Physical Society},
+  publisher = {American Phys. Society},
   doi = {10.1103/PhysRevD.100.114027},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.100.114027}
+}
+
+@article{PhysRevD.105.074022,
+  title = {How well do we know the gluon polarization in the proton?},
+  author = {Zhou, Y. and Sato, N. and Melnitchouk, W.},
+  collaboration = {Jefferson Lab Angular Momentum (JAM) Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {105},
+  issue = {7},
+  pages = {074022},
+  numpages = {19},
+  year = {2022},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.105.074022},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.105.074022}
 }
